Modified search command